--- a/default.html
+++ b/default.html
@@ -30,6 +30,41 @@
 
     <a id="setManifestBtn" class="button">Set</a>
 
+    <div style="display: none">
+        <hr/>
+
+        <h3>Locale</h3>
+
+        <p>Test setting the data-locale attribute on the embedding div.</p>
+
+        <select id="locale">
+
+        </select>
+
+        <p>Set locale precedence and label e.g. "cy-GB:Welsh,en-GB:English"</p>
+
+        <input id="locales" type="text" value="" />
+
+        <a id="setLocalesBtn" class="button">Set</a>
+
+        <hr/>
+
+        <h3>Config&nbsp;<span class="config-name"></span></h3>
+
+        <p>Changes to config made with this tool are at the session level and not persisted.</p>
+
+        <ul id="edit-config" class="button-group">
+            <li><a id="editBtn" href="#" class="button">Edit</a></li>
+            <li><a id="closeBtn" href="#" class="button hide">Close</a></li>
+            <li><a id="saveBtn" href="#" class="button hide">Save</a></li>
+            <li><a id="resetBtn" href="#" class="button hide">Reset</a></li>
+        </ul>
+
+        <div id="editPnl" class="hide">
+            <div id="editor"></div>
+        </div>
+    </div>
+
 </footer>
 
 <script type="text/javascript" src="browserdetect.js"></script>
@@ -38,6 +73,7 @@
 <script type="text/javascript" src="lib/jmespath.js/jmespath.js"></script>
 <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
 <script type="text/javascript" src="plugins.js"></script>
+<script type="text/javascript" src="testids.js"></script>
 <script type="text/javascript" src="examples.js"></script>
 
 <script>
