--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 </header>
 
 <main>
-    <div class="uv" data-no-load="true" style="width:800px; height:600px; background-color: #000"></div>
+    <div class="uv" data-no-load="true"></div>
 </main>
 
-<footer style="display: none">
+<!--<footer style="display: none">-->
 
 </footer>
 
