--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <input id="manifest" type="text" value="" />
 
-    <a id="setManifestBtn" class="button">Set</a>
+    <a id="setManifestBtn" class="button small">Open</a>
 
     <a id="dragndrop">
         <img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">
@@ -23,12 +23,12 @@
 </header>
 
 <main>
-    <div class="uv" data-no-load="true"></div>
+    <div id="uv" class="uv" data-no-load="true"></div>
 </main>
 
 <!--<footer style="display: none">-->
 
-</footer>
+<!--</footer>-->
 
 <script type="text/javascript" src="browserdetect.js"></script>
 <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
