--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
     <input id="manifest" type="text" value="" />
 
-    <a id="setManifestBtn" class="button small">Open</a>
+    <div class="buttons">
+        <a id="setManifestBtn" class="button tiny">Open</a>
 
-    <a id="dragndrop">
-        <img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">
-    </a>
+        <a id="dragndrop">
+            <img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">
+        </a>
+    </div>
+
 </header>
 
 <main>
