--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Universal Viewer Examples</title>
+    <title>Universal Viewer</title>
     <link rel="icon" href="/examples/favicon.ico">
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
