--- a/uv/app.html
+++ b/uv/app.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <div id="app" class="loading"></div>
+    <div id="app"></div>
     <script type="text/javascript">
         var app = document.getElementById("app");
         var width = window.innerWidth || document.documentElement.clientWidth;
