--- a/index.html
+++ b/index.html
@@ -6,39 +6,52 @@
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <meta property="og:site_name" content="Universal Viewer"/>
+    <meta property="og:url" content="http://universalviewer.io" />
+    <meta property="fb:app_id" content="1061317590587322" />
     <!--<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>-->
     <!--<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>-->
 </head>
 <body>
 
-<header>
-    <select id="manifestSelect"></select>
+    <header>
+        <select id="manifestSelect"></select>
 
-    <input id="manifest" type="text" placeholder="IIIF Manifest URI" value="" />
+        <input id="manifest" type="text" placeholder="IIIF Manifest URI" value="" />
 
-    <div class="buttons">
-        <a id="setManifestBtn" class="button tiny">Open</a>
+        <div class="buttons">
+            <a id="setManifestBtn" class="button tiny">Open</a>
 
-        <a id="dragndrop">
-            <img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">
-        </a>
-    </div>
+            <a id="dragndrop">
+                <img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">
+            </a>
+        </div>
 
-</header>
+    </header>
 
-<main>
-    <div id="uv" class="uv" data-no-load="true"></div>
-</main>
+    <main>
+        <div id="uv" class="uv" data-no-load="true"></div>
+    </main>
 
-<footer>
+    <footer>
 
-</footer>
+    </footer>
 
-<script type="text/javascript" src="browserdetect.js"></script>
-<script type="text/javascript" src="lib/utils/dist/utils.js"></script>
-<script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
-<script type="text/javascript" src="lib/jquery-plugins/dist/jquery-plugins.js"></script>
-<script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="browserdetect.js"></script>
+    <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
+    <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="lib/jquery-plugins/dist/jquery-plugins.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-47890586-2', 'auto');
+        ga('send', 'pageview');
+    </script>
 
 </body>
 </html>
