--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <meta property="fb:app_id" content="1061317590587322" />
     <meta property="og:site_name" content="Universal Viewer"/>
     <meta property="og:url" content="http://universalviewer.io" />
-    <meta property="fb:app_id" content="1061317590587322" />
     <!--<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>-->
     <!--<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>-->
 </head>
 <body>
 
     <header>
+
+        <img id="logo" src="logo.jpg" alt="Universal Viewer" />
+
         <select id="manifestSelect"></select>
 
         <input id="manifest" type="text" placeholder="IIIF Manifest URI" value="" />
