--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta property="fb:app_id" content="1061317590587322" />
     <meta property="og:site_name" content="Universal Viewer"/>
+    <meta property="og:title" content="Universal Viewer"/>
     <meta property="og:url" content="http://universalviewer.io" />
+    <meta property="og:image" content="logo.jpg"/>
     <!--<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>-->
     <!--<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>-->
 </head>
