--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="Universal Viewer"/>
     <meta property="og:title" content="Universal Viewer"/>
     <meta property="og:url" content="http://universalviewer.io" />
-    <meta property="og:image" content="logo.jpg"/>
+    <meta property="og:image" content="http://universalviewer.io/logo.jpg"/>
     <!--<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>-->
     <!--<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>-->
 </head>
