--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <meta property="fb:app_id" content="1061317590587322" />
+    <meta property="fb:page_id" content="1061317590587322" />
     <meta property="og:site_name" content="Universal Viewer"/>
     <meta property="og:title" content="Universal Viewer"/>
     <meta property="og:url" content="http://universalviewer.io" />
@@ -18,7 +18,7 @@
 
     <header>
 
-        <img id="logo" src="logo.jpg" alt="Universal Viewer" />
+        <img id="logo" src="/logo.jpg" alt="Universal Viewer" />
 
         <select id="manifestSelect"></select>
 
