--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="buttons">
             <a id="setManifestBtn" class="button tiny">Open</a>
 
-            <a id="dragndrop">
-                <img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">
-            </a>
+            <!--<a id="dragndrop">-->
+                <!--<img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">-->
+            <!--</a>-->
         </div>
 
     </header>
