--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <meta property="fb:page_id" content="1061317590587322" />
-    <meta property="og:site_name" content="Universal Viewer"/>
-    <meta property="og:title" content="Universal Viewer"/>
+    <meta property="og:site_name" content="UniversalViewer"/>
+    <meta property="og:title" content="UniversalViewer"/>
     <meta property="og:url" content="http://universalviewer.io" />
     <meta property="og:image" content="http://universalviewer.io/logo.jpg"/>
+    <meta property="fb:app_id" content="1061317590587322" />
     <!--<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>-->
     <!--<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>-->
 </head>
