--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header>
 
-        <img id="logo" src="/logo.jpg" alt="Universal Viewer" />
+        <img id="logo" src="logo.png" />
 
         <select id="manifestSelect"></select>
 
@@ -26,10 +26,6 @@
 
         <div class="buttons">
             <a id="setManifestBtn" class="button tiny">Open</a>
-
-            <!--<a id="dragndrop">-->
-                <!--<img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">-->
-            <!--</a>-->
         </div>
 
     </header>
