--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta property="og:title" content="UniversalViewer"/>
     <meta property="og:url" content="http://universalviewer.io" />
     <meta property="og:image" content="http://universalviewer.io/logo.jpg"/>
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
     <meta property="fb:app_id" content="1061317590587322" />
     <!--<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>-->
     <!--<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>-->
@@ -17,8 +20,6 @@
 <body>
 
     <header>
-
-        <img id="logo" src="logo.png" />
 
         <select id="manifestSelect"></select>
 
