--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <meta property="og:title" content="UniversalViewer"/>
-    <meta property="og:image" content="http://universalviewer.io/logo.jpg"/>
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="600" />
-    <meta property="fb:app_id" content="1061317590587322" />
+    <!--<meta property="og:title" content="UniversalViewer"/>-->
+    <!--<meta property="og:image" content="http://universalviewer.io/logo.jpg"/>-->
+    <!--<meta property="og:image:type" content="image/jpeg" />-->
+    <!--<meta property="og:image:width" content="600" />-->
+    <!--<meta property="og:image:height" content="600" />-->
+    <!--<meta property="fb:app_id" content="1061317590587322" />-->
     <!--<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>-->
     <!--<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>-->
 </head>
 <body>
 
     <header>
+
+        <h1 id="title"></h1>
+
+        <img id="image" />
 
         <select id="manifestSelect"></select>
 
@@ -44,13 +48,17 @@
     <script type="text/javascript" src="scripts.js"></script>
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-47890586-2', 'auto');
-        ga('send', 'pageview');
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-47890586-2']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
     </script>
 
 </body>
