--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h1 id="title"></h1>
 
-        <img id="image" />
+        <a id="link"><img id="image" /></a>
 
         <select id="manifestSelect"></select>
 
