--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <header>
 
-        <h1 id="title"></h1>
+        <a id="link"></a>
 
-        <a id="link"><img id="image" /></a>
+        <img id="image" />
 
         <select id="manifestSelect"></select>
 
