--- a/uv/app.html
+++ b/uv/app.html
@@ -2,6 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <script type="text/javascript" src="lib/easyXDM.min.js"></script>
     <script data-main="lib/app" type="text/javascript" src="lib/require.js"></script>
     <style type="text/css">
