--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Universal Viewer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="icon" href="/examples/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <div id="uv" class="uv" data-no-load="true"></div>
+        <div id="uv" class="uv" data-config="/config.json" data-no-load="true"></div>
     </main>
 
     <footer>
