--- a/index2.html
+++ b/index2.html
@@ -73,7 +73,7 @@
             <div class="header-content-inner">
                 <img src="/img/logo.png" alt="UV" />
                 <hr class="clear">
-                <p>The Universal Viewer is a IIIF community-developed open source project on a mission to help you share your content with the world</p>
+                <p>The Universal Viewer is a community-developed open source project on a mission to help you share your content with the world</p>
                 <a href="#features" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
