--- a/index2.html
+++ b/index2.html
@@ -155,6 +155,13 @@
                         <p class="text-muted">Internationalised UI using <a href="https://www.transifex.com/">transifex.com</a></p>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="feature-box">
+                        <i class="fa fa-4x fa-lock text-primary sr-icons"></i>
+                        <h3>Securable</h3>
+                        <p class="text-muted">The UV supports the <a href="http://iiif.io/api/auth/">IIIF Auth API</a>, so your content can be password protected.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
