--- a/index2.html
+++ b/index2.html
@@ -234,7 +234,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Get In Touch</h2>
-                    <br/>
+                    <hr class="primary">
                     <p><a href="https://universalviewerinvite.herokuapp.com/">Join the UV Slack</a></p>
                     <p><a href="https://groups.google.com/forum/#!forum/universalviewer">Join the UV Google Group</a></p>
                     <p><a href="https://github.com/universalviewer/universalviewer">Fork the UV on Github</a></p>
