--- a/index2.html
+++ b/index2.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">View a IIIF Manifest</h2>
                     <hr class="light">
-                    <p>Paste the URL of an IIIF manifest here to see the UV in action!</p>
+                    <p>Paste the URL of a IIIF manifest here to see the UV in action!</p>
                     <p>
                         <input id="manifest" type="text" placeholder="IIIF Manifest URI" value="" />
                     </p>
