added nlw to showcase

--- a/index2.html
+++ b/index2.html
@@ -87,7 +87,7 @@
                     <hr class="light">
                     <p>Paste the URL of a IIIF manifest here to see the UV in action!</p>
                     <p>
-                        <input id="manifest" type="text" placeholder="IIIF Manifest URI" value="" />
+                        <input id="manifest" type="text" placeholder="IIIF Manifest URL" value="" />
                     </p>
                     <a id="viewManifest" class="btn btn-default btn-xl sr-button">View</a>
                 </div>
@@ -214,8 +214,21 @@
                         </div>
                     </a>
                 </div>
-
-                
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://viewer.library.wales/4389767" class="showcase-box">
+                        <img src="/img/showcase/nlw.jpg" class="img-responsive" alt="">
+                        <div class="showcase-box-caption">
+                            <div class="showcase-box-caption-content">
+                                <div class="project-category text-faded">
+                                    National Library of Wales
+                                </div>
+                                <div class="project-name">
+                                    Cardiganshire Constabulary register of criminals
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
