added princeton and ncsu showcase items

--- a/index2.html
+++ b/index2.html
@@ -229,6 +229,36 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://bluemountain.princeton.edu/exist/apps/bluemountain/issue.html?issueURN=bmtnaab_1920-02_01" class="showcase-box">
+                        <img src="/img/showcase/princeton.jpg" class="img-responsive" alt="">
+                        <div class="showcase-box-caption">
+                            <div class="showcase-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Princeton University Library
+                                </div>
+                                <div class="project-name">
+                                    Action, Première Année, Numéro 1
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30" class="showcase-box">
+                        <img src="/img/showcase/ncsu.jpg" class="img-responsive" alt="">
+                        <div class="showcase-box-caption">
+                            <div class="showcase-box-caption-content">
+                                <div class="project-category text-faded">
+                                    NCSU Libraries
+                                </div>
+                                <div class="project-name">
+                                    The Nubian Message
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
