added ghent and explanatory text

--- a/index2.html
+++ b/index2.html
@@ -259,6 +259,21 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://lib.ugent.be/viewer/archive.ugent.be%3A4B39C8CA-6FF9-11E1-8C42-C8A93B7C8C91" class="showcase-box">
+                        <img src="/img/showcase/ghent.jpg" class="img-responsive" alt="">
+                        <div class="showcase-box-caption">
+                            <div class="showcase-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Ghent University Library
+                                </div>
+                                <div class="project-name">
+                                    Document uit het archief van de dichter Dioskoros van Aphrodite
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -278,9 +293,18 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Get In Touch</h2>
                     <hr class="primary">
-                    <p><a href="https://universalviewerinvite.herokuapp.com/">Join the UV Slack</a></p>
-                    <p><a href="https://groups.google.com/forum/#!forum/universalviewer">Join the UV Google Group</a></p>
-                    <p><a href="https://github.com/universalviewer/universalviewer">Fork the UV on Github</a></p>
+                    <p>
+                        <a href="https://universalviewerinvite.herokuapp.com/">Join the UV Slack</a>
+                        <span class="explanatory">This is where most of the conversation happens</span>
+                    </p>
+                    <p>
+                        <a href="https://groups.google.com/forum/#!forum/universalviewer">Join the UV Google Group</a>
+                        <span class="explanatory">A good place to ask questions if you are just trying out the UV</span>
+                    </p>
+                    <p>
+                        <a href="https://github.com/universalviewer/universalviewer">Fork the UV on Github</a>
+                        <span class="explanatory">We &hearts; pull requests</span>
+                    </p>
                 </div>
             </div>
         </div>
