added random manifest

--- a/index2.html
+++ b/index2.html
@@ -170,7 +170,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://access.bl.uk/item/viewer/ark:/81055/vdc_00000004216E" class="showcase-box">
+                    <a href="http://access.bl.uk/item/viewer/ark:/81055/vdc_00000004216E" data-manifest="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_00000004216E/manifest.json" class="showcase-box">
                         <img src="/img/showcase/bl.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
@@ -185,7 +185,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://wellcomelibrary.org/item/b20417081" class="showcase-box">
+                    <a href="http://wellcomelibrary.org/item/b20417081" data-manifest="http://wellcomelibrary.org/iiif/collection/b20417081" class="showcase-box">
                         <img src="/img/showcase/wellcome.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
@@ -200,7 +200,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://digital.library.villanova.edu/Item/vudl:92879" class="showcase-box">
+                    <a href="https://digital.library.villanova.edu/Item/vudl:92879" data-manifest="https://digital.library.villanova.edu/Item/vudl:92879/Manifest" class="showcase-box">
                         <img src="/img/showcase/villanova.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
@@ -215,7 +215,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://viewer.library.wales/4389767" class="showcase-box">
+                    <a href="https://viewer.library.wales/4389767" data-manifest="https://damsssl.llgc.org.uk/iiif/2.0/4389767/manifest.json" class="showcase-box">
                         <img src="/img/showcase/nlw.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
@@ -230,7 +230,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://bluemountain.princeton.edu/exist/apps/bluemountain/issue.html?issueURN=bmtnaab_1920-02_01" class="showcase-box">
+                    <a href="http://bluemountain.princeton.edu/exist/apps/bluemountain/issue.html?issueURN=bmtnaab_1920-02_01" data-manifest="http://bluemountain.princeton.edu/exist/restxq/iiif/collection/top" class="showcase-box">
                         <img src="/img/showcase/princeton.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
@@ -245,7 +245,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30" class="showcase-box">
+                    <a href="https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30" data-manifest="https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30/manifest" class="showcase-box">
                         <img src="/img/showcase/ncsu.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
@@ -260,7 +260,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://lib.ugent.be/viewer/archive.ugent.be%3A4B39C8CA-6FF9-11E1-8C42-C8A93B7C8C91" class="showcase-box">
+                    <a href="http://lib.ugent.be/viewer/archive.ugent.be%3A4B39C8CA-6FF9-11E1-8C42-C8A93B7C8C91" data-manifest="http://adore.ugent.be/IIIF/manifests/archive.ugent.be%3A4B39C8CA-6FF9-11E1-8C42-C8A93B7C8C91" class="showcase-box">
                         <img src="/img/showcase/ghent.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
