--- a/index2.html
+++ b/index2.html
@@ -289,6 +289,21 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://universalviewer.io/examples/?manifest=https%3A%2F%2Fiiif.riksarkivet.se%2Farkis!C0000263%2Fmanifest" data-manifest="https://iiif.riksarkivet.se/arkis!C0000263/manifest" class="showcase-box">
+                        <img src="/img/showcase/riksarkivet.jpg" class="img-responsive" alt="">
+                        <div class="showcase-box-caption">
+                            <div class="showcase-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Riksarkivet
+                                </div>
+                                <div class="project-name">
+                                    Ervalla kyrkoarkiv, Husförhörslängder
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
