--- a/index.html
+++ b/index.html
@@ -288,15 +288,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://universalviewer.io/examples/?manifest=https%3A%2F%2Fiiif.riksarkivet.se%2Farkis!C0000263%2Fmanifest" data-manifest="https://iiif.riksarkivet.se/arkis!C0000263/manifest" class="showcase-box">
+                    <a href="https://sok.riksarkivet.se/bildvisning/Sdhk_456.jpg?beta=true" data-manifest="https://iiif.riksarkivet.se/sdhk!456/manifest" class="showcase-box">
                         <img src="/img/showcase/riksarkivet.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Riksarkivet
+                                    Riksarkivet (The Swedish National Archives)
                                 </div>
                                 <div class="project-name">
-                                    Ervalla kyrkoarkiv, Husförhörslängder
+                                    SDHK nr 456, datering 1229-01-23
                                 </div>
                             </div>
                         </div>
@@ -350,6 +350,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Theme JavaScript -->
+    <script type="text/javascript" src="/vendor/utils/utils.js"></script>
     <script src="js/index.min.js"></script>
 
     <script>
