--- a/uv.html
+++ b/uv.html
@@ -17,15 +17,13 @@
 </head>
 <body class="viewer">
     
-    <header>
-
-        <input id="manifest" type="text" placeholder="IIIF Manifest URL" value="" />
-
-        <div class="buttons">
-            <a id="setManifestBtn" class="btn btn-default btn-xl sr-button">View</a>
+    <nav id="mainNav" class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand page-scroll" href="/">UV</a>
+            </div>
         </div>
-
-    </header>
+    </nav>
 
     <main>
         <div id="uv" class="uv" data-config="/config.json" data-no-load="true"></div>
