--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://sok.riksarkivet.se/bildvisning/Sdhk_456.jpg?beta=true" data-manifest="https://iiif.riksarkivet.se/sdhk!456/manifest" class="showcase-box">
+                    <a href="https://sok.riksarkivet.se/bildvisning/R0000004_00001?beta=true" data-manifest="https://iiif.riksarkivet.se/arkis!R0000004/manifest" class="showcase-box">
                         <img src="/img/showcase/riksarkivet.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
@@ -296,7 +296,7 @@
                                     Riksarkivet (The Swedish National Archives)
                                 </div>
                                 <div class="project-name">
-                                    SDHK nr 456, datering 1229-01-23
+                                    Originaltraktater med främmande makter (traktater)
                                 </div>
                             </div>
                         </div>
