updated princeton manifest

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://bluemountain.princeton.edu/exist/apps/bluemountain/issue.html?issueURN=bmtnaab_1920-02_01" data-manifest="http://bluemountain.princeton.edu/exist/restxq/iiif/collection/top" class="showcase-box">
+                    <a href="http://bluemountain.princeton.edu/exist/apps/bluemountain/issue.html?titleURN=bmtnaae&issueURN=bmtnaae_1918-12_01#viewer" data-manifest="http://bluemountain.princeton.edu/exist/restxq/iiif/bmtnaae_1918-12_01/manifest" class="showcase-box">
                         <img src="/img/showcase/princeton.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
@@ -236,7 +236,7 @@
                                     Princeton University Library
                                 </div>
                                 <div class="project-name">
-                                    Action, Première Année, Numéro 1
+                                    Dada (Zurich, Switzerland), 3
                                 </div>
                             </div>
                         </div>
