added twitter link

--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
                         <span class="explanatory">A good place to ask questions if you are just trying out the UV</span>
                     </p>
                     <p>
+                        <a href="https://twitter.com/universalviewer">Follow the UV on Twitter</a>
+                        <span class="explanatory">A good way to keep informed of notable developments</span>
+                    </p>
+                    <p>
                         <a href="https://github.com/universalviewer/universalviewer">Fork the UV on Github</a>
                         <span class="explanatory">We &hearts; pull requests</span>
                     </p>
