--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         <a class="page-scroll" href="#showcase">Showcase</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#moreinfo">More Info</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -315,6 +318,21 @@
         </div>
     </aside>-->
 
+    <section id="moreinfo">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">More Info</h2>
+                    <hr class="primary">
+                    <p>
+                        <a href="https://github.com/UniversalViewer/universalviewer/wiki/About">About the UV</a>
+                        <span class="explanatory">The wiki has information about the origins of the UV and tutorials to help you get started</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -341,6 +359,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
