--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#support">Support</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -350,6 +353,21 @@
                     <p>
                         <a href="https://twitter.com/universalviewer">Follow the UV on Twitter</a>
                         <span class="explanatory">A good way to keep informed of notable developments</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="support">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Support the UV</h2>
+                    <hr class="primary">
+                    <p>
+                        <a href="https://opencollective.com/universalviewer">Become a backer on Open Collective</a>
+                        <span class="explanatory">This helps us to fund community support and bug fixes</span>
                     </p>
                     <p>
                         <a href="https://github.com/universalviewer/universalviewer">Fork the UV on Github</a>
