--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://sok.riksarkivet.se/bildvisning/R0000004_00001?beta=true" data-manifest="https://iiif.riksarkivet.se/arkis!R0000004/manifest" class="showcase-box">
+                    <a href="https://sok.riksarkivet.se/bildvisning/R0000004_00001?viewer=UV" data-manifest="https://iiif.riksarkivet.se/arkis!R0000004/manifest" class="showcase-box">
                         <img src="/img/showcase/riksarkivet.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
