added meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 
     <meta charset="utf-8">
+    <meta name="description" content="The Universal Viewer is a community-developed open source project on a mission to help you share your content with the world">
+    <meta name="keywords" content="IIIF,Viewer,Image,Video,Audio,PDF,3D,IPFS">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.ico">
