--- a/debug/av-test.html
+++ b/debug/av-test.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <audio src="http://resources.digirati.com/bl/C1685_98/vdc_100052359795.0x000019/manifest.mpd"></audio>
+    <audio controls src="http://resources.digirati.com/bl/C1685_98/vdc_100052359795.0x000019/manifest.mpd"></audio>
 </body>
 </html>
