--- a/debug/av-test.html
+++ b/debug/av-test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://unpkg.com/dashjs@2.6.6/dist/dash.all.min.js"></script>
 </head>
 <body>
     <audio controls src="http://resources.digirati.com/bl/C1685_98/vdc_100052359795.0x000019/manifest.mpd"></audio>
