--- a/debug/av-test.html
+++ b/debug/av-test.html
@@ -6,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="https://unpkg.com/dashjs@2.6.6/dist/dash.all.min.js"></script>
+    <style>
+        video {
+           width: 640px;
+           height: 360px;
+        }
+    </style>
 </head>
 <body>
-    <audio controls src="http://resources.digirati.com/bl/C1685_98/vdc_100052359795.0x000019/manifest.mpd"></audio>
+    <audio data-dashjs-player controls src="http://resources.digirati.com/bl/C1685_98/vdc_100052359795.0x000019/manifest.mpd"></audio>
 </body>
 </html>
