--- a/debug/av-test.html
+++ b/debug/av-test.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="https://unpkg.com/dashjs@2.6.6/dist/dash.all.min.js"></script>
     <style>
-        video {
+        audio, video {
            width: 640px;
            height: 360px;
         }
