--- a/debug/av-test.html
+++ b/debug/av-test.html
@@ -14,6 +14,6 @@
     </style>
 </head>
 <body>
-    <audio data-dashjs-player controls src="http://resources.digirati.com/bl/C1685_98/vdc_100052359795.0x000019/manifest.mpd"></audio>
+    <video data-dashjs-player controls src="http://resources.digirati.com/bl/C1685_98/vdc_100052359795.0x000019/manifest.mpd"></video>
 </body>
 </html>
