--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                         <a class="page-scroll" href="#view">View IIIF Manifest</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#showreel">Showreel</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#features">Features</a>
                     </li>
                     <li>
@@ -100,7 +103,23 @@
             </div>
         </div>
     </section>
-
+    <section id="showreel">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Showreel</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="youtube-wrapper col-lg-8 col-lg-offset-2 text-center">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/shUVTbYdQts" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="features">
         <div class="container">
             <div class="row">
@@ -408,6 +427,37 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
 
+    </script>
+
+<script>
+        $(function() {
+            // Find all YouTube videos
+            var $allVideos = $("iframe"),
+            // The element that is fluid width
+            $fluidEl = "div.youtube-wrapper";
+            // Figure out and save aspect ratio for each video
+            $allVideos.each(function() {
+                $(this)
+                    .data('aspectRatio', this.height / this.width)
+                    // and remove the hard coded width/height
+                    .removeAttr('height')
+                    .removeAttr('width');
+            });
+
+            // When the window is resized
+            // (You'll probably want to debounce this)
+            $(window).resize(function() {
+                // Resize all videos according to their own aspect ratio
+                $allVideos.each(function() {											
+                    var $el = $(this);
+                    var newWidth = $el.parent($fluidEl).width();
+                    $el
+                        .width(newWidth)
+                        .height(newWidth * $el.data('aspectRatio'));
+                });
+            // Kick off one resize to fix all videos on page load
+            }).resize();
+        });
     </script>
 
 </body>
