removed configurable until config editor is re-introduced

--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                         <p class="text-muted">Fork the <a href="https://github.com/UniversalViewer/uv-en-GB-theme">UV theme</a> on github to create your own.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="feature-box">
                         <i class="fa fa-4x fa-wrench text-primary sr-icons"></i>
                         <h3>Configurable</h3>
                         <p class="text-muted">The UV has its own visual configuration editor allowing all settings to be customised.</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="feature-box">
                         <i class="fa fa-4x fa-plug text-primary sr-icons"></i>
