--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div class="feature-box">
                         <i class="fa fa-4x fa-search text-primary sr-icons"></i>
                         <h3>Searchable</h3>
-                        <p class="text-muted">Supports <a href="http://iiif.io/api/search/">search and autocomplete</a> service integration with overlayed search results.</p>
+                        <p class="text-muted">Supports <a href="http://iiif.io/api/search/">search and autocomplete</a> service integration with overlaid search results.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
