--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     <h2 class="section-heading">Get In Touch</h2>
                     <hr class="primary">
                     <p>
-                        <a href="https://universalviewerinvite.herokuapp.com/">Join the UV Slack</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeHLD0kng5aXvGFsNN_tJGsZMTnp08Hv2F6kdGsJRb6bT0NWw/viewform">Join the UV Slack</a>
                         <span class="explanatory">This is where most of the conversation happens</span>
                     </p>
                     <p>
