--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Custom Fonts -->
     <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Plugin CSS -->
     <link href="/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -348,10 +348,10 @@
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeHLD0kng5aXvGFsNN_tJGsZMTnp08Hv2F6kdGsJRb6bT0NWw/viewform">Join the UV Slack</a>
                         <span class="explanatory">This is where most of the conversation happens</span>
                     </p>
-                    <p>
+                    <!-- <p>
                         <a href="https://groups.google.com/forum/#!forum/universalviewer">Join the UV Google Group</a>
                         <span class="explanatory">A good place to ask questions if you are just trying out the UV</span>
-                    </p>
+                    </p> -->
                     <p>
                         <a href="https://twitter.com/universalviewer">Follow the UV on Twitter</a>
                         <span class="explanatory">A good way to keep informed of notable developments</span>
