--- a/index.html
+++ b/index.html
@@ -176,36 +176,6 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://access.bl.uk/item/viewer/ark:/81055/vdc_00000004216E" data-manifest="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_00000004216E/manifest.json" class="showcase-box">
-                        <img src="/img/showcase/bl.jpg" class="img-responsive" alt="">
-                        <div class="showcase-box-caption">
-                            <div class="showcase-box-caption-content">
-                                <div class="project-category text-faded">
-                                    British Library
-                                </div>
-                                <div class="project-name">
-                                    The Works of Charles Dickens
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://wellcomelibrary.org/item/b20417081" data-manifest="http://wellcomelibrary.org/iiif/collection/b20417081" class="showcase-box">
-                        <img src="/img/showcase/wellcome.jpg" class="img-responsive" alt="">
-                        <div class="showcase-box-caption">
-                            <div class="showcase-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Wellcome Library
-                                </div>
-                                <div class="project-name">
-                                    The Natural Method of Healing: A New and Complete Guide to Health
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
                     <a href="https://digital.library.villanova.edu/Item/vudl:92879" data-manifest="https://digital.library.villanova.edu/Item/vudl:92879/Manifest" class="showcase-box">
                         <img src="/img/showcase/villanova.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
@@ -236,21 +206,6 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://bluemountain.princeton.edu/exist/apps/bluemountain/issue.html?titleURN=bmtnaae&issueURN=bmtnaae_1918-12_01#viewer" data-manifest="http://bluemountain.princeton.edu/exist/restxq/iiif/bmtnaae_1918-12_01/manifest" class="showcase-box">
-                        <img src="/img/showcase/princeton.jpg" class="img-responsive" alt="">
-                        <div class="showcase-box-caption">
-                            <div class="showcase-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Princeton University Library
-                                </div>
-                                <div class="project-name">
-                                    Dada (Zurich, Switzerland), 3
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
                     <a href="https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30" data-manifest="https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30/manifest" class="showcase-box">
                         <img src="/img/showcase/ncsu.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
@@ -265,22 +220,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://lib.ugent.be/viewer/archive.ugent.be%3A4B39C8CA-6FF9-11E1-8C42-C8A93B7C8C91" data-manifest="https://adore.ugent.be/IIIF/manifests/archive.ugent.be%3A4B39C8CA-6FF9-11E1-8C42-C8A93B7C8C91" class="showcase-box">
-                        <img src="/img/showcase/ghent.jpg" class="img-responsive" alt="">
-                        <div class="showcase-box-caption">
-                            <div class="showcase-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Ghent University Library
-                                </div>
-                                <div class="project-name">
-                                    Document uit het archief van de dichter Dioskoros van Aphrodite
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 col-lg-offset-2">
                     <a href="http://iiif.bodleian.ox.ac.uk/iiif/viewer/60834383-7146-41ab-bfe1-48ee97bc04be" data-manifest="http://iiif.bodleian.ox.ac.uk/iiif/manifest/60834383-7146-41ab-bfe1-48ee97bc04be.json" class="showcase-box">
                         <img src="/img/showcase/bodleian.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
@@ -295,7 +235,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 col-sm-offset-3 col-lg-offset-0">
                     <a href="https://sok.riksarkivet.se/bildvisning/R0000004_00001?viewer=UV" data-manifest="https://iiif.riksarkivet.se/arkis!R0000004/manifest" class="showcase-box">
                         <img src="/img/showcase/riksarkivet.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
