--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="description" content="The Universal Viewer is a community-developed open source project on a mission to help you share your content with the world">
+    <meta name="description" content="One interface for all of your content: Universal Viewer displays images, multimedia, documents and 3D models in an extensible and embeddable open-source application.">
     <meta name="keywords" content="IIIF,Viewer,Image,Video,Audio,PDF,3D,IPFS">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,7 +79,7 @@
             <div class="header-content-inner">
                 <img src="/img/logo.png" alt="UV" />
                 <hr class="clear">
-                <p>The Universal Viewer is a community-developed open source project on a mission to help you share your content with the world</p>
+                <p>One interface for all of your content: Universal Viewer displays images, multimedia, documents and 3D models in an extensible and embeddable open-source application.</p>
                 <a href="#features" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -353,3 +353,4 @@
 </body>
 
 </html>
+
