--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="feature-box">
                         <i class="fa fa-4x fa-search-plus text-primary sr-icons"></i>
                         <h3>Zoomable</h3>
-                        <p class="text-muted"><a href="https://openseadragon.github.io/">OpenSeadragon</a> image zooming using the <a href="http://iiif.io/api/image/2.0/">IIIF image API</a></p>
+                        <p class="text-muted"><a href="https://openseadragon.github.io/">OpenSeadragon</a> image zooming using the <a href="http://iiif.io/api/image/">IIIF image API</a></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -353,4 +353,5 @@
 </body>
 
 </html>
+
 
