Add link to config documentation.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="feature-box">
                         <i class="fa fa-4x fa-wrench text-primary sr-icons"></i>
                         <h3>Configurable</h3>
-                        <p class="text-muted">The UV is highly configurable with an array of customisable settings.</p>
+                        <p class="text-muted">The UV is highly configurable with an array of <a href="https://github.com/UniversalViewer/universalviewer/blob/dev/manual/CONFIG.md">customisable settings</a>.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -346,6 +346,7 @@
 </body>
 
 </html>
+
 
 
 
