Add UVCON link to header.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                     <li>
                         <a class="page-scroll" href="#support">Support</a>
                     </li>
+                    <li>
+                        <a href="https://uvcon.io/">UVCON</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -346,6 +349,7 @@
 </body>
 
 </html>
+
 
 
 
