--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="feature-box">
                         <i class="fa fa-4x fa-quote-left text-primary sr-icons"></i>
                         <h3>Translatable</h3>
-                        <p class="text-muted">Internationalised UI using <a href="https://www.transifex.com/">transifex.com</a></p>
+                        <p class="text-muted">Internationalised UI supporting English, Welsh, Swedish and more.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -349,6 +349,7 @@
 </body>
 
 </html>
+
 
 
 
