--- a/index.html
+++ b/index.html
@@ -289,8 +289,12 @@
                         <span class="explanatory">A good place to ask questions if you are just trying out the UV</span>
                     </p> -->
                     <p>
-                        <a href="https://twitter.com/universalviewer">Follow the UV on Twitter</a>
+                        Follow the UV on Social media: <a href="https://bsky.app/profile/universalviewer.io">Bluesky</a> or <a href="https://glammr.us/@universalviewer">Mastodon</a>
                         <span class="explanatory">A good way to keep informed of notable developments</span>
+                    </p>
+                    <p>
+                        Or email us: <a href="mailto:universalviewerapp@gmail.com">universalviewerapp@gmail.com</a>
+                        <span class="explanatory">It's not fancy but it works!</span>
                     </p>
                 </div>
             </div>
@@ -349,6 +353,7 @@
 </body>
 
 </html>
+
 
 
 
