Improve contact formatting.

--- a/index.html
+++ b/index.html
@@ -289,11 +289,12 @@
                         <span class="explanatory">A good place to ask questions if you are just trying out the UV</span>
                     </p> -->
                     <p>
-                        Follow the UV on Social media: <a href="https://bsky.app/profile/universalviewer.io">Bluesky</a> or <a href="https://glammr.us/@universalviewer">Mastodon</a>
+                        <a href="https://bsky.app/profile/universalviewer.io">Follow the UV on Bluesky</a>
+                        <a href="https://glammr.us/@universalviewer">Follow the UV on Mastodon</a>
                         <span class="explanatory">A good way to keep informed of notable developments</span>
                     </p>
                     <p>
-                        Or email us: <a href="mailto:universalviewerapp@gmail.com">universalviewerapp@gmail.com</a>
+                        <a href="mailto:universalviewerapp@gmail.com">Or email us at universalviewerapp@gmail.com</a>
                         <span class="explanatory">It's not fancy but it works!</span>
                     </p>
                 </div>
@@ -353,6 +354,7 @@
 </body>
 
 </html>
+
 
 
 
