--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
                     <h2 class="section-heading">Support the UV</h2>
                     <hr class="primary">
                     <p>
-                        <a href="https://opencollective.com/universalviewer">Become a backer on Open Collective</a>
-                        <span class="explanatory">This helps us to fund community support and bug fixes</span>
+                        <a href="https://opencollective.com/universalviewer">Make a contribution on Open Collective</a>
+                        <span class="explanatory">This helps us to fund community support and bug fixes; sponsors are invited to become <a href="https://github.com/UniversalViewer/universalviewer/wiki/Steering-Group">Steering Group</a> members</span>
                     </p>
                     <p>
                         <a href="https://github.com/universalviewer/universalviewer">Fork the UV on Github</a>
@@ -354,6 +354,7 @@
 </body>
 
 </html>
+
 
 
 
